# brython-dev

./: CHANGELOG.md  LICENSE  README.md  app.html  brython.yml  pyproject.toml  tox.ini
brython_dev/: __init__.py  __main__.py
brython_dev/templates/: index.html
tests/: app.py  conftest.py  test_brython_dev.py  test_cli.py  test_config.py  test_factory.py
tests_dist/: __main__.py  app.py
